--- a/.github/workflows/main-test.yaml
+++ b/.github/workflows/main-test.yaml
@@ -24,7 +24,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@56fddc0bad4dc0ea35b8c6d7140df689da8f96a5
+        uses: kosinal/ec2-github-runner@feature/sdk_update
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -61,7 +61,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@56fddc0bad4dc0ea35b8c6d7140df689da8f96a5
+        uses: kosinal/ec2-github-runner@feature/sdk_update
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
