testing configurable storage

--- a/.github/workflows/forks.yaml
+++ b/.github/workflows/forks.yaml
@@ -90,7 +90,7 @@ jobs:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           ec2-image-id: ${{ env.AMD_EC2_IMAGE_ID }}
-          ec2-instance-type: c5.2xlarge
+          ec2-instance-type: c5.xlarge
           subnet-id: subnet-afcc80e3
           security-group-id: sg-17247164
           aws-resource-tags: > # optional, requires additional permissions
