--- a/.github/workflows/main-test.yaml
+++ b/.github/workflows/main-test.yaml
@@ -39,6 +39,7 @@ jobs:
               {"Key": "Name", "Value": "ec2-github-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
+          startup-quiet-period-seconds: 10
   arm64-build:
     name: ARM64 Build
     needs: arm64-start-runner # required to start the main job when the runner is ready
@@ -97,6 +98,7 @@ jobs:
               {"Key": "Name", "Value": "ec2-github-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
+          startup-quiet-period-seconds: 10
   amd-build:
     name: AMD Build
     needs: amd-start-runner # required to start the main job when the runner is ready
