--- a/.github/workflows/main-test.yaml
+++ b/.github/workflows/main-test.yaml
@@ -40,6 +40,7 @@ jobs:
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
           startup-quiet-period-seconds: 10
+          startup-retry-interval-seconds: 2
   arm64-build:
     name: ARM64 Build
     needs: arm64-start-runner # required to start the main job when the runner is ready
@@ -99,6 +100,7 @@ jobs:
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
           startup-quiet-period-seconds: 10
+          startup-retry-interval-seconds: 2
   amd-build:
     name: AMD Build
     needs: amd-start-runner # required to start the main job when the runner is ready
