--- a/.github/workflows/spot.yaml
+++ b/.github/workflows/spot.yaml
@@ -41,6 +41,8 @@ jobs:
               {"Key": "Name", "Value": "ec2-github-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
+          startup-quiet-period-seconds: 10
+          startup-retry-interval-seconds: 2
   arm64-build:
     name: ARM64 Build
     needs: arm64-start-runner # required to start the main job when the runner is ready
@@ -100,6 +102,8 @@ jobs:
               {"Key": "Name", "Value": "ec2-github-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
+          startup-quiet-period-seconds: 10
+          startup-retry-interval-seconds: 2
   amd-build:
     name: AMD Build
     needs: amd-start-runner # required to start the main job when the runner is ready
