--- a/.github/workflows/spot.yaml
+++ b/.github/workflows/spot.yaml
@@ -27,7 +27,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: esteve/ec2-github-runner@38f565af621834df2b7aefe1e5d9cc6d8963b0e2
+        uses: machulav/ec2-github-runner@v2.3.9
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -67,7 +67,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: esteve/ec2-github-runner@38f565af621834df2b7aefe1e5d9cc6d8963b0e2
+        uses: machulav/ec2-github-runner@v2.3.9
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -88,7 +88,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: esteve/ec2-github-runner@38f565af621834df2b7aefe1e5d9cc6d8963b0e2
+        uses: machulav/ec2-github-runner@v2.3.9
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -128,7 +128,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: esteve/ec2-github-runner@38f565af621834df2b7aefe1e5d9cc6d8963b0e2
+        uses: machulav/ec2-github-runner@v2.3.9
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
