--- a/.github/workflows/spot.yaml
+++ b/.github/workflows/spot.yaml
@@ -33,7 +33,8 @@ jobs:
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           ec2-image-id: ${{ env.ARM_EC2_IMAGE_ID }}
           ec2-instance-type: c7g.large
-          subnet-id: subnet-afcc80e3
+          # subnet-id: subnet-afcc80e3
+
           security-group-id: sg-17247164
           market-type: spot
           aws-resource-tags: > # optional, requires additional permissions
