--- a/.github/workflows/main-test.yaml
+++ b/.github/workflows/main-test.yaml
@@ -3,11 +3,11 @@ name: ARM64 RUNNER MAIN TEST
 on:
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 env:
-  RUNNER_AWS_REGION: us-east-2              # Set this to the region the runner should be run in.
+  RUNNER_AWS_REGION: us-east-2 # Set this to the region the runner should be run in.
   ARM_EC2_IMAGE_ID: ami-0778eace43412c477
   AMD_EC2_IMAGE_ID: ami-0fc380fa21f7ef808
 jobs:
@@ -88,7 +88,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@feature/fix-timeout-issue
+        uses: machulav/ec2-github-runner@v2.4.1
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -128,7 +128,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@feature/fix-timeout-issue
+        uses: machulav/ec2-github-runner@v2.4.1
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
