--- a/.github/workflows/forks.yaml
+++ b/.github/workflows/forks.yaml
@@ -27,7 +27,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: weavr-io/ec2-github-runner@6a8ce6801ed7b8aa4b3662f1966ad6b4e687494d
+        uses: yonch/ec2-github-runner@b1aa09b6098d5016637acca400fcff2d901cdcf2
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -66,7 +66,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: weavr-io/ec2-github-runner@6a8ce6801ed7b8aa4b3662f1966ad6b4e687494d
+        uses: yonch/ec2-github-runner@b1aa09b6098d5016637acca400fcff2d901cdcf2
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -89,7 +89,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: weavr-io/ec2-github-runner@6a8ce6801ed7b8aa4b3662f1966ad6b4e687494d
+        uses: yonch/ec2-github-runner@b1aa09b6098d5016637acca400fcff2d901cdcf2
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -128,7 +128,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: weavr-io/ec2-github-runner@6a8ce6801ed7b8aa4b3662f1966ad6b4e687494d
+        uses: yonch/ec2-github-runner@b1aa09b6098d5016637acca400fcff2d901cdcf2
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
