--- a/.github/workflows/spot.yaml
+++ b/.github/workflows/spot.yaml
@@ -100,7 +100,7 @@ jobs:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           # ec2-image-id: ${{ env.AMD_EC2_IMAGE_ID }}
-          ec2-instance-type: c4.large
+          ec2-instance-type: c6i.large
           # subnet-id: subnet-afcc80e3
           # security-group-id: sg-17247164
           market-type: spot
