--- a/.github/workflows/forks.yaml
+++ b/.github/workflows/forks.yaml
@@ -27,7 +27,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@hot-fix/update-command-to-run
+        uses: machulav/ec2-github-runner@feature/support-for-jit
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -42,6 +42,7 @@ jobs:
             ]
           startup-quiet-period-seconds: 2
           startup-retry-interval-seconds: 2
+          use-jit: true
   arm64-build:
     name: ARM64 Build
     needs: arm64-start-runner # required to start the main job when the runner is ready
@@ -66,7 +67,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@hot-fix/update-command-to-run
+        uses: machulav/ec2-github-runner@feature/support-for-jit
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -89,7 +90,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@hot-fix/update-command-to-run
+        uses: machulav/ec2-github-runner@feature/support-for-jit
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -104,6 +105,7 @@ jobs:
             ]
           startup-quiet-period-seconds: 2
           startup-retry-interval-seconds: 2
+          use-jit: true
   amd-build:
     name: AMD Build
     needs: amd-start-runner # required to start the main job when the runner is ready
@@ -128,7 +130,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@hot-fix/update-command-to-run
+        uses: machulav/ec2-github-runner@feature/support-for-jit
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
