--- a/.github/workflows/forks.yaml
+++ b/.github/workflows/forks.yaml
@@ -8,7 +8,7 @@ on:
     branches: ["main"]
 env:
   RUNNER_AWS_REGION: us-east-2 # Set this to the region the runner should be run in.
-  ARM_EC2_IMAGE_ID: ami-0b46a689671e8f6f6
+  ARM_EC2_IMAGE_ID: ami-0dee95f50c6ce0d66
   AMD_EC2_IMAGE_ID: ami-0fc380fa21f7ef808
   # Example of using a specific commit hash: devin-purple/ec2-github-runner@f1faf6d3845bde4651fb5f5613a19c869bf7f2be
 jobs:
@@ -27,7 +27,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@feature/support-for-jit
+        uses: machulav/ec2-github-runner@v2.5.1
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -67,7 +67,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@feature/support-for-jit
+        uses: machulav/ec2-github-runner@v2.5.1
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -90,7 +90,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@feature/support-for-jit
+        uses: machulav/ec2-github-runner@v2.5.1
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -130,7 +130,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@feature/support-for-jit
+        uses: machulav/ec2-github-runner@v2.5.1
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
