--- a/.github/workflows/main-test.yaml
+++ b/.github/workflows/main-test.yaml
@@ -26,7 +26,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@v2.5.1
+        uses: machulav/ec2-github-runner@hot-fix/revert-to-cloud-config
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -52,6 +52,22 @@ jobs:
       - name: Build
         run: |
           echo "ONE TWO THREE FOUR"
+      - name: Raw Docker check
+        run: |
+          echo "=== env ==="
+          env | sort
+          echo "=== docker version ==="
+          timeout 10 /usr/bin/docker version
+          echo "=== docker info ==="
+          timeout 10 /usr/bin/docker info
+          echo "=== docker buildx version ==="
+          timeout 10 docker buildx version 2>/dev/null || echo "buildx not installed"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
+          cleanup: false
+          platforms: linux/arm64
   arm64-stop-runner:
     name: Stop self-hosted EC2 runner
     needs:
@@ -67,7 +83,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@v2.5.1
+        uses: machulav/ec2-github-runner@hot-fix/revert-to-cloud-config
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -88,7 +104,7 @@ jobs:
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@v2.5.1
+        uses: machulav/ec2-github-runner@hot-fix/revert-to-cloud-config
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
@@ -113,6 +129,22 @@ jobs:
       - name: Build
         run: |
           echo "ONE TWO THREE FOUR"
+      - name: Raw Docker check
+        run: |
+          echo "=== env ==="
+          env | sort
+          echo "=== docker version ==="
+          timeout 10 /usr/bin/docker version
+          echo "=== docker info ==="
+          timeout 10 /usr/bin/docker info
+          echo "=== docker buildx version ==="
+          timeout 10 docker buildx version 2>/dev/null || echo "buildx not installed"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
+          cleanup: false
+          platforms: linux/arm64
   amd-stop-runner:
     name: Stop self-hosted EC2 runner
     needs:
@@ -128,7 +160,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.RUNNER_AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@v2.5.1
+        uses: machulav/ec2-github-runner@hot-fix/revert-to-cloud-config
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
